# CPT_GffParser

./: .gitignore  CPT_GFFParser.py  CPT_ParserHelpers.py  LICENSE  README.md  gffSeqFeature.py  parserTester.py  setup.cfg
cptgffparser/: CPT_GFFParser.py  CPT_ParserHelpers.py  __init__.py
scripts/: parserTester.py
src/CPT_GFF/: CPT_GFFParser.py  CPT_ParserHelpers.py  gffSeqFeature.py
src/CPT_GFFParser/: CPT_GFFParser.py
