[globsl]
quiet = 0

[metadata]
name = cptgffparser
version = 21.3.11
description='Extensively featured biopython and galaxy compatible GFF Python parser and writer.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TAMU-CPT/CPT_GffParser
author = Anthony Criscione, Center for Phage Technology
author_email =
license = MIT
keywords = python biopython gff parser
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
setup_requires =
    setuptools
install_requires =
    biopython >= 1.70

scripts=
    scripts/parserTester.py

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
