[metadata]
name = CPT_GFFParser
version = 1.0.2
author = Anthony Criscione
author_email = talkingbeaverthing@gmail.com
description = A Biopython-based parser and writer for GFF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TAMU-CPT/CPT_GffParser
project_urls =
    Bug Tracker = https://github.com/TAMU-CPT/CPT_GffParser/issues
keywords = gff gff3 bioinformatics
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    biopython >= 1.70

[options.packages.find]
where = src
